Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
1.5.0
-
None
Description
Reproducible with the seed shown:
$ build/latest/bin/encoding-test -test_random_seed=-129518567 --gtest_filter=TestEncoding.TestBinaryPlainBlockBuilderRoundTrip
Note: Google Test filter = TestEncoding.TestBinaryPlainBlockBuilderRoundTrip
[==========] Running 1 test from 1 test case.
[----------] Global test environment set-up.
[----------] 1 test from TestEncoding
[ RUN ] TestEncoding.TestBinaryPlainBlockBuilderRoundTrip
WARNING: Logging before InitGoogleLogging() is written to STDERR
I0829 09:16:22.198427 2011275264 test_util.cc:195] Using random seed: -129518567
I0829 09:16:22.199496 2011275264 encoding-test.cc:288] Block: 000000: 3930 0000 8802 0000 0c00 0000 000c 0c0c 90..............
000010: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
000020: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
000030: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
000040: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
000050: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
000060: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
000070: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
000080: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
000090: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
0000a0: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
0000b0: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
0000c0: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
0000d0: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
0000e0: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
0000f0: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
000100: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
000110: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
000120: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
000130: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
000140: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
000150: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
000160: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
000170: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
000180: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
000190: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
0001a0: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
0001b0: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
0001c0: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
0001d0: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
0001e0: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
0001f0: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
000200: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
000210: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
000220: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
000230: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
000240: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
000250: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
000260: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
000270: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
000280: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
000290: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
0002a0: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
0002b0: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
0002c0: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
0002d0: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
0002e0: 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c ................
0002f0: 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 ................
000300: 0c0c 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c ................
000310: 0c0c 0c00 0c0c 0c0c 000c 0c0c 0c00 0c0c ................
000320: 0c0c 000c 0c0c 0c00 0c0c 0c0c 000c 0c0c ................
000330: 0c00 0c0c 0c0c ......
/Users/wdberkeley/kudu/src/kudu/cfile/encoding-test.cc:291: Failure
Expected: (s.size()) > (kCount * 2u), actual: 822 vs 1296
I0829 09:16:22.200042 2011275264 test_util.cc:116] -----------------------------------------------
I0829 09:16:22.200057 2011275264 test_util.cc:117] Had fatal failures, leaving test files at /private/tmp/kudutest-502/encoding-test.TestEncoding.TestBinaryPlainBlockBuilderRoundTrip.1504023382196540-92769
[ FAILED ] TestEncoding.TestBinaryPlainBlockBuilderRoundTrip (3 ms)
[----------] 1 test from TestEncoding (3 ms total)
[----------] Global test environment tear-down
[==========] 1 test from 1 test case ran. (3 ms total)
[ PASSED ] 0 tests.
[ FAILED ] 1 test, listed below:
[ FAILED ] TestEncoding.TestBinaryPlainBlockBuilderRoundTrip
1 FAILED TEST